feat: 日志模块封装

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
-*.test
+# Test binary, built with `go test1 -c`
+*.test1
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
